--- a/index.html
+++ b/index.html
@@ -1,11 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Flower - Shop </title>
+    <link rel="stylesheet" href="style.css/style.css">
 </head>
+
 <body>
-    
+    <header>
+        <div class="container banner">
+
+            <div class="banner-text">
+                <h2>Let's make beautiful flowers a part of your life.</h2>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                    looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
+                    distribution of letters.</p>
+                <button>Shop Now</button>
+            </div>
+            <div class="banner-img">
+                <img src="images/pngwing 10.png" alt="">
+            </div>
+
+        </div>
+
+    </header>
+
+    <main>
+        <section id="featured">
+            <div class="container">
+                <div class="section-heading">
+                    <h2>Our Featured Flowers</h2>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page
+                        when looking at its layout.</p>
+                </div>
+                <div class="section-content">
+                    <div class="flower">
+                        <div class="flower-img pink">
+                            <img src="images/pngwing 6.png" alt="">
+                        </div>
+                        <p>Pink Flower Tree</p>
+                    </div>
+                    <div class="flower">
+                        <div class="flower-img blue">
+                            <img src="images/pngwing 5.png" alt="">
+                        </div>
+                        <p>Pink Flower Tree</p>
+                    </div>
+                    <div class="flower">
+                        <div class="flower-img yellow">
+                            <img src="images/pngwing 7.png" alt="">
+                        </div>
+                        <p>Pink Flower Tree</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
 </body>
+
 </html>
